Fix card alignment

--- a/src/components/ADMIN/AllJobs/AllJobsCard.module.css
+++ b/src/components/ADMIN/AllJobs/AllJobsCard.module.css
@@ -14,7 +14,8 @@
 
 .titleContainer {
 	display: flex;
-	flex-wrap: wrap;
+	flex-direction: column;
+	/* flex-wrap: wrap; */
 	align-items: baseline;
 	/* gap: 1em; */
 }
@@ -80,6 +81,7 @@
 .applicants {
 	margin: auto 0 0 auto;
 	padding: 0 1em 0.5em 0;
+	font-size: 1.2rem;
 }
 
 .dotsContainerMobile {
