--- a/src/components/ORG/YourJobs/YourJobsCard.module.css
+++ b/src/components/ORG/YourJobs/YourJobsCard.module.css
@@ -14,6 +14,7 @@
 
 .titleContainer {
 	display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
 	align-items: baseline;
 	/* gap: 1em; */
