--- a/src/components/STU/YourApplications/YourApplicationsCard.module.css
+++ b/src/components/STU/YourApplications/YourApplicationsCard.module.css
@@ -16,6 +16,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: baseline;
+	flex-direction: column;
 	/* gap: 1em; */
 }
 
